2007-11-01  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: improved message about the state of fink on leopard
	* PkgVersion.pm: improved message to users when a build fails

2007-10-27  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Services.pm: some leopard/xcode upgrades end up leaving
	gcc_select around; make sure it's ignored on 10.5 and higher.

2007-10-24  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: recognize 10.5.0, but with a warning about upgrades
	* Bootstrap.pm: in modify_description, make a substitution on
	@DISTRIBUTION@, and wrap the file in Info4, unless $distribution = 
	10.3 or 10.4.  Also, use readlink() to determine the distribution when
	running scripts

2007-10-23  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: Split out add_injected_to_trees as a separate function,
	so that it can be used in fink's postinstall.pl.
	* SelfUpdate.pm: Update the UpdatePackages listed in fink.conf.

2007-10-17  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: timeout/selection for "already have the source"
	same as Mirror.pm's "try next site"

2007-10-16  Daniel Macks  <dmacks@netspace.org>

	* Checksum/*.pm, Finally/*.pm, Notify/*.pm, SelfUpdate/*.pm, *.pm, finkVersion.pm.in:  Update FSF street address.

2007-10-15  Christian Schaffner  <chris01@users.sourceforge.net>

	* SelfUpdate.pm: Try to remove old metadata first before switching
	to new update method, since the first step might fail, if there 
	is a left over fink.old directory.
	* SelfUpdate/CVS.pm: Check for remaining fink.old directory first
	before removing metadata. Allow for :local: cvs access. Add more
	details about merging old trees. 
	And fix hardlinking: the perl 'link' function returns true on
	success.

2007-10-15  Christian Schaffner  <chris01@users.sourceforge.net>

	* SelfUpdate/Point.pm: Fix typo, and show warning message if 
	trying to change to point from any other method.

2007-10-13  Daniel Macks  <dmacks@netspace.org>
